# game-window

./: BuildSettings.cmake  CMakeLists.txt
.github/workflows/: ci.yml
cmake/: FindEGL.cmake
include/: game_window.h  game_window_error_handler.h  game_window_manager.h  key_mapping.h
src/: game_window_error_handler.cpp  game_window_manager.cpp  joystick_manager.cpp  joystick_manager.h  joystick_manager_glfw.cpp  joystick_manager_glfw.h  joystick_manager_linux_gamepad.cpp  joystick_manager_linux_gamepad.h  window_eglut.cpp  window_eglut.h  window_glfw.cpp  window_glfw.h  window_manager_eglut.cpp  window_manager_eglut.h  window_manager_glfw.cpp  window_manager_glfw.h  window_manager_glfw_fallback_eglut.cpp  window_manager_glfw_fallback_eglut.h  window_manager_sdl2.cpp  window_manager_sdl2.h  window_manager_sdl3.cpp  window_manager_sdl3.h  window_sdl2.cpp  window_sdl2.h  window_sdl3.cpp  window_sdl3.h  window_with_linux_gamepad.cpp  window_with_linux_gamepad.h
